tests/NormalTests/paczka1/fuzzy1/10768530.err
Error in line 4: Z2WvUSvKo1 A975 36,0
Error in line 9: WEVegvs S260 88,6
Error in line 17: FyIv73Ntvrh A328 68,3
Error in line 23: Z2WvUSvKo1 A328 30,4
Error in line 26: FyIv73Ntvrh A975 38,6
Error in line 34: A597 A328 17,19
